# Python-Piscine

./: Intra Projects Python - 0 - Starting Edit.htm  python data types.docx
 Python -0 - Starting/ex00/: Hello.py
 Python -0 - Starting/ex01/: format_ft_time.py
 Python -0 - Starting/ex02/: find_ft_type.py  tester.py
 Python -0 - Starting/ex03/: NULL_not_found.py
 Python -0 - Starting/ex04/: whatis.py
 Python -0 - Starting/ex07/: sos.py
 Python -0 - Starting/ex09/: LICENSE
 Python -2 - DataTable/ex00/: load_csv.py  tester.py
 Python -2 - DataTable/ex01/: aff_life.py
 Python -2 - DataTable/ex02/: aff_pop.py  population_total.csv
 Python -2 - DataTable/ex03/: projection_life.py
Python - 1/: temp_subject.txt
Python - 1/ex00/: give_bmi.py  tester.py
Python - 1/ex01/: array2D.py
Python - 1/ex02/: create_image.py  tester.py
Python - 1/ex03/: zoom.py
Python - 1/ex04/: rotate.py
Python - 1/ex05/: load_image.py  pimp_image.py  tester.py
Python - 3- OOP/ex00/: tester.py
Python - 3- OOP/ex01/: S1E7.py  S1E9.py  tester.py
Python - 3- OOP/ex02/: DiamondTrap.py  tester.py
Python - 3- OOP/ex03/: ft_calculator.py  tester.py
Python - 3- OOP/ex04/: ft_calculator.py  tester.py
Python -0/ex00/: Hello.py
Python -0/ex01/: format_ft_time.py
Python -0/ex02/: find_ft_type.py
Python -0/ex03/: NULL_not_found.py  tester.py
Python -0/ex04/: whatis.py
Python -0/ex05/: building.py
Python -0/ex09/: README.md  setup.cfg
Python -0/ex09/ft_package/: tools.py
Python -0/ex09/ft_package.egg-info/: PKG-INFO
Python -0/ex09/tests/: test.py
(+9 files in other folders)
