[metadata]
name = ft_package
version = 0.0.1
description = A sample test package
long_description = file: README.md
long_description_content_type = text/markdown
author = Ayman Marzouk
author_email = your_email@example.com
license = MIT
url = https://github.com/your_username/ft_package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6